# skill-me

./: CLAUDE.md  README.md  history.json  install.sh
.claude/: ralph-prompt.md
address-pr-comments/: SKILL.md
audit/: SKILL.md
pipeline-workspace/iteration-1/: benchmark.json
pipeline-workspace/iteration-1/pipeline-audit/: eval_metadata.json
pipeline-workspace/iteration-2/: benchmark.json  ground_truth.json  manifest.json
pipeline-workspace/iteration-2/pipeline-taskflow/: eval_metadata.json
pipeline-workspace/iteration-3/: ground_truth_datamill.json
pipeline-workspace/iteration-4/: ground_truth_eventbus.json
pr-review/: SKILL.md
rebug/: SKILL.md
rebug-workspace/iteration-1/: benchmark.json  benchmark.md
rebug-workspace/iteration-1/vague-issues/: eval_metadata.json
rebug/evals/: evals.json
spring_clean/: SKILL.md
spring_clean-workspace/iteration-1/: benchmark.json  benchmark.md
spring_clean-workspace/iteration-1/audit-graph-dl/: eval_metadata.json
spring_clean-workspace/skill-snapshot/: SKILL.md
spring_clean/evals/: evals.json
test-repo/datamill/: README.md  pyproject.toml
test-repo/eventbus/: pyproject.toml
test-repo/taskflow/: README.md  pyproject.toml
test-repo/taskflow/api/: main.py
test-repo/taskflow/api/routes/: admin.py  tasks.py  users.py
test-repo/taskflow/models/: database.py  task.py  user.py
test-repo/taskflow/services/: job_processor.py  notification_service.py  task_service.py
test-repo/taskflow/tests/: test_tasks.py
test-repo/taskflow/utils/: auth.py  cache.py  logging.py
(+53 files in other folders)
